Fonts, styles and tasks

--- a/css/main.less
+++ b/css/main.less
@@ -1,2 +1,29 @@
 @import "_reset.less";
 @import "grid.less";
+@import "typeplate.less";
+@import "fonts.less";
+
+.bold() {
+  font-family: 'charis_silbold', 'Book Antiqua', 'Palatino', 'Palatino Linotype', 'Palatino LT STD', 'Georgia', 'serif';
+}
+
+.normal() {
+  font-family: 'charis_silregular', 'Book Antiqua', 'Palatino', 'Palatino Linotype', 'Palatino LT STD', 'Georgia', 'serif';
+}
+
+html {
+  font-family: 'charis_silregular', 'Book Antiqua', 'Palatino', 'Palatino Linotype', 'Palatino LT STD', 'Georgia', 'serif';
+}
+
+body {
+  margin: 0 auto;
+  width: 98%;
+
+  a {
+    text-decoration: none;
+  }
+}
+
+main {
+  .row();
+}
