--- a/layouts/index.jade
+++ b/layouts/index.jade
@@ -5,7 +5,7 @@ html
   head
     title
       block title
-      | London in stereoscopic 3D
+      | London Timescapes film
 
     link(rel='stylesheet', href='css/style.css')
     meta(charset="UTF-8")
@@ -16,11 +16,13 @@ html
     meta(name="apple-mobile-web-app-status-bar-style", content="black")
     meta(name="apple-touch-fullscreen", content="yes")
     meta(name="-webkit-text-size-adjust", content="100%")
-    meta(name="title", content="London 3D")
-    meta(name="description", content="Stereoscopic 3D pictures of London city")
+    meta(name="title", content="London Timescapes film")
+    meta(name="description", content="Stereoscopic timelapsing in London")
+    link(rel='stylesheet', href='/css/main.css')
 
   body
     main
+      img(src='images/london-timescapes-title.svg')
       h1 London Timescapes 3D
       p Short film by Alex Savin
       p More info coming soon
