--- a/layouts/index.jade
+++ b/layouts/index.jade
@@ -29,6 +29,35 @@ html
 
       div.description
         h4 What?
-        p Short film by Alex Savin
-        p More info coming soon
+        p Short film by Alex Savin. Stereoscopic high-res timelapses of the city that never sleeps. Shot with a custom dual Canon EOS rig in native 4K 3D. Will be available for distribution around March 2015.
+        h4 Download links
+        p
+          | You can download trailer for your personal offline usage in a multitude of formats, including proper 4K and stereoscopic 3D.
+        ul
+          li
+            a(href="/video/London-Timescapes-Trailer-4K-2D.mp4") 4K 2D version
+            |, 464 Mb
+          li
+            a(href="/video/London-Timescapes-Trailer-3D-4K-SBS.mp4") 4K 3D side-by-side version
+            |, 464 Mb
+          li
+            a(href="/video/London-Timescapes-Trailer-2D-HD-1080p.m2t") HD 1080p 2D version
+            |, 358 Mb
+          li
+            a(href="/video/London-Timescapes-Trailer-3D-HD-SBS.mp4") HD 3D 1080p side-by-side version
+            |, 187 Mb
+        p
+          | This content is provided with Creative Commons Attribution Non-commercial ShareAlike
+          a(href="http://creativecommons.org/licenses/by-nc-sa/3.0/")  license
+          | .
+        h4 Stills
+        p
+          | A set of stereoscopic stills can be viewed on
+          a(href="http://phereo.com/album/537bcd53df7df3342d000000")  Phereo
+        h4 Contact
+        ul
+          li Twitter:
+            a(href="https://twitter.com/karismafilms") @karismafilms
+          li Email:
+            a(href="mailto:karismafilms@gmail.com") karismafilms@gmail.com
     +scripts
